# fibRNG

./: .gitignore  README.md  cabal.project  fib-rng-clash.cabal  hie.yaml
src/: Fibonacci.hs  LFSR.hs
src/Fibonacci/: Taps.hs
src/LFSR/: Fibonacci.hs
src/LFSR/Fibonacci/: MaxLenTaps.hs  TH.hs  Taps.hs
tests/: doctests.hs  unittests.hs
tests/Tests/: Fibonacci.hs
tests/Tests/LFSR/: Fibonacci.hs
tests/Tests/LFSR/Fibonacci/: TH.hs
